[tool.poetry]
name = "keeagent-doc"
version = "0.1.0"
description = "KeeAgent Documentation"
authors = ["David Lechner <david@lechnology.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = "1.8.5"
sphinx-rtd-theme = "0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
