[tool.poetry]
package-mode = false
name = "keeagent-doc"
version = "0.1.0"
description = "KeeAgent Documentation"
authors = ["David Lechner <david@lechnology.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
